# perfxagent-app

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CSS_FIXES.md  DEVELOPER_ID_TEST_REPORT.md  DEVELOPMENT.md  LICENSE  LYRIC_SYNC_README.md  PACKAGING_GUIDE.md  PROJECT_HISTORY(1).md  PROJECT_HISTORY(2).md  PROJECT_HISTORY(2)_Integration with AI Coding.md  PROJECT_HISTORY(3).md  PROJECT_HISTORY(4).md  PROJECT_HISTORY(5).md  PROJECT_HISTORY(6)_ installation package.md  PROJECT_HISTORY(7)_MacOS and Cross Platfform.md  PROJECT_HISTORY(8)_Clear ALL.md  PROJECT_HISTORY.md  README.md  REALTIME_ASR_IMPLEMENTATION.md  UI_REDESIGN_SUMMARY.md  build.sh  compile_commands.json  fuck_ai.md  package.json  run.sh  technical_arch.md  test_asr.sh  test_asr_credentials.cpp  test_obfuscated_keys.cpp  test_protocol_log.sh  websocket-protocol.md
HISTORY/: PROJECT_HISTORY(4)_Bulding UI.md  PROJECT_HISTORY(5)_Accurately fixing bugs.md  PROJECT_HISTORY(7)_MacOS and Cross Platfform.md  PROJECT_HISTORY(8)_Clear ALL.md  PROJECT_HISTORY.md
cmake/: MacOSXBundleInfo.plist.in  create_app_icon.sh  deploy_dependencies.sh  setup_dmg_ds_store.sh
config/: README.md  api_keys_template.json
data/: asr_usage_stats.json  asr_usage_stats_backup.json
doc/: UI.pptx
docs/: API_KEY_CONFIGURATION_GUIDE.md  API_KEY_PROTECTION.md  ASR_TIMER_FEATURE.md  audio_settings.md  config_manager_refactor.md  macos_build.md  ui_effects_manager_guide.md  windows_build.md
examples/: CMakeLists.txt  README.md  SECURITY_GUIDE.md  asr_config_example.env  asr_ixwebsocket_example.cpp  asr_simple_example.cpp  asr_timer_example.cpp  asr_usage_example.cpp  audio_example.cpp  header_test.cpp  realtime_asr_test.cpp  simple_realtime_asr_test.cpp  ui_effects_example.cpp
examples/audio/: CMakeLists.txt  README.md  audio_example.cpp  file_import_example.cpp  pa_record_example.cpp
examples/camera/: CMakeLists.txt  camera_example.cpp
examples/websocket/: CMakeLists.txt  README.md  websocket_example.cpp
include/asr/: asr_client.h  asr_debug_config.h  asr_log_utils.h  asr_manager.h  asr_qt_client.h  secure_key_manager.h
include/audio/: README.md  audio_config.h  audio_converter.h  audio_device.h  audio_device_info.h  audio_manager.h  audio_processor.h  audio_thread.h  audio_types.h  file_importer.h
include/camera/: camera_device.h  camera_manager.h  camera_types.h
include/connection/: connection_manager.h  thread_pool.h  websocket_client.h  websocket_message.h
include/core/: config_manager.h
include/logic/: realtime_transcription_controller.h
include/ui/: about_project_widget.h  agent_zoo.h  animated_button.h  app_icon_button.h  audio_settings.h  audio_to_text_window.h  config_manager.h  device_settings.h  global_state.h  hello_window.h  input_method_manager.h  main_window.h  realtime_audio_to_text_window.h  server_settings.h  system_config_window.h
resources/: README.md  resources.qrc
resources/icons/: app_icon.icns
resources/images/: PerfxAgent-ASR.tiff
scripts/: README.md  build_dev.sh  build_package.sh  generate_obfuscated_keys.py  icon_generator.sh  pre_push_check.sh  sign_and_notarize.sh
scripts/common/: package_validator.sh
src/: CMakeLists.txt  main.cpp  main.js
src/asr/: ASR_MODULE_README.md  ASR_README_火山.md  asr_client.cpp  asr_manager.cpp  asr_qt_client.cpp  secure_key_manager.cpp
src/asr/test/: CMakeLists.txt  CMakeLists_simple_test.txt  README.md  build_test.sh  test_qt_websocket.cpp
src/asr/test/simple_test_build/: CMakeLists.txt  asr_qt_client.cpp  simple_asr_test.cpp
src/audio/: audio_config.cpp  audio_converter.cpp  audio_device.cpp  audio_manager.cpp  audio_processor.cpp  audio_thread.cpp  audio_types.cpp  file_importer.cpp
src/camera/: camera_device.cpp  camera_manager.cpp
src/connection/: connection_manager.cpp  thread_pool.cpp  websocket_client.cpp  websocket_message.cpp
src/core/: config_manager.cpp
src/logic/: realtime_transcription_controller.cpp
src/ui/: about_project_widget.cpp  agent_zoo.cpp  app_icon_button.cpp  audio_settings.cpp  audio_settings.h  audio_to_text_window.cpp  config_loader.cpp  config_manager.cpp  config_validator.cpp  device_settings.cpp  global_state.cpp  hello_window.cpp  input_method_manager.cpp  main_window.cpp  realtime_audio_to_text_window.cpp  server_settings.cpp  system_config_window.cpp  system_config_window.h  ui_effects_manager.cpp
